--- a/index.html
+++ b/index.html
@@ -100,7 +100,8 @@
 <body>
     <div id="popup">
         <img src="https://4kwallpapers.com/images/wallpapers/happy-valentines-3840x2160-9976.png" alt="Hello Kitty Cupid" class="kitty">
-        <p>Will you be my Valentine? 💖</p>
+        <p>Will you be my Valentine Eden?</p>
+        <p>From Kern 💖</p>
         <button id="yes" onclick="yes()">Yes! 😍</button>
         <button id="no" onmouseover="moveNo()">No 😿</button>
     </div>
